<resources>
    <string name="app_name">Sayakil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_email">Notification</string>
    <string name="menu_payment">Payment Information</string>
    <string name="menu_trip">Trips</string>
    <string name="menu_billing">Billing Statement</string>
    <string name="menu_statistics">Contact Us</string>
    <string name="menu_rentle_timer">Rentle Timer</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_my_location">Location</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_cycle">Cycle</string>
    <string name="menu_star">Star</string>
    <string name="menu_setting">Setting</string>
    <string name="open">open</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ACCOUNT_AUTO_RENEW_LBL_CONFIRM_NO">No, I do not want to automatically renew the membership when it expires.</string>
    <string name="ACCOUNT_AUTO_RENEW_LBL_CONFIRM_YES_DIFFERENT_SUBTYPE">Yes, I want to automatically renew the membership before it expires.\10\10It will be renewed with the following type:\10%1$s\10%2$s</string>
    <string name="ACCOUNT_AUTO_RENEW_LBL_CONFIRM_YES_SAME_AS_CURRENT">Yes, I want to automatically renew the membership before it expires.\10\10\10It will be renewed with the same type as the current membership.</string>
    <string name="ACCOUNT_AUTO_RENEW_LBL_CONFIRM_YES_SAME_AS_NEXT">Yes, I want to automatically renew the membership before it expires.\10\10It will be renewed with the same type as the upcoming (next) membership.</string>
    <string name="ACCOUNT_BILLING_STATEMENT_TITLE_PURCHASES">Purchases breakdown</string>
    <string name="ACCOUNT_BILLING_STATEMENT_TITLE_SUMMARY_PURCHASES">Purchases</string>
    <string name="ACCOUNT_MEMBER_INFO_LBL_NB_BIKES">Bikes:</string>
    <string name="ACCOUNT_MEMBER_INFO_LBL_TRIP_BUNDLE_1_TITLE">TRIP BUNDLE 1</string>
    <string name="ACCOUNT_MEMBER_INFO_LBL_TRIP_BUNDLE_2_TITLE">TRIP BUNDLE 2</string>
    <string name="ACCOUNT_MEMBER_INFO_LBL_TRIP_BUNDLE_LEFT">Trips left:</string>
    <string name="ACCOUNT_MEMBER_INFO_LBL_TRIP_BUNDLE_TYPE">Type:</string>
    <string name="ACCOUNT_MEMBER_LIST_LBL_NB_BIKES">(%1$d bikes)</string>
    <string name="ACCOUNT_MEMBER_PROFILE_BTN_REDEEM">Redeem</string>
    <string name="ACCOUNT_MESSAGE_BLOCKED">You cannot sign into your account because your account is blocked. Contact customer service.</string>
    <string name="ACCOUNT_MESSAGE__TITLE_BLOCKED">Account blocked</string>
    <string name="ADR_ACCOUNT_BILLING_STATEMENT_TITLE_PURCHASES">PURCHASES BREAKDOWN</string>
    <string name="ADR_CHANGE_DEFAULT_STATION_REFRESH_DIALOG_BTN_CHANGE">CHANGE</string>
    <string name="ADR_CHANGE_DEFAULT_STATION_REFRESH_DIALOG_BTN_DISMISS">DISMISS</string>
    <string name="ADR_CHANGE_DEFAULT_STATION_REFRESH_DIALOG_LBL_PROMPT">Your station data refresh frequency is set to manual. Do you want to change it to refresh every minute?\10\10Note, the application will only refresh station data while you are using it. You can always change the frequency later in the application preferences.</string>
    <string name="ADR_LEAVE_BEHIND_BTN_UNDO">UNDO</string>
    <string name="ADR_LEAVE_BEHIND_LBL_DELETED">Deleted</string>
    <string name="ADR_MAP_DIALOG_RENAME_FAV_PLACES_BNT_CANCEL">CANCEL</string>
    <string name="ADR_MAP_DIALOG_RENAME_FAV_PLACES_BNT_RENAME">RENAME</string>
    <string name="ADR_NFC_AID_DESC">Rent a bike using NFC</string>
    <string name="ADR_NFC_NOTIFICATION_ERROR_TEXT">Try again</string>
    <string name="ADR_NFC_NOTIFICATION_ERROR_TITLE">Failed to communicate with dock</string>
    <string name="ADR_NFC_NOTIFICATION_SUCCESS_TEXT">Wait for the bike to unlock</string>
    <string name="ADR_NFC_NOTIFICATION_SUCCESS_TITLE">Communicated with bike dock</string>
    <string name="ADR_NFC_RENTAL_VIEW_LBL_INSTRUCTIONS">Place phone near dock and wait to unlock</string>
    <string name="ADR_NFC_RENTAL_VIEW_LBL_PROGRESS_LOADING">Loading ...</string>
    <string name="ADR_NFC_RENTAL_VIEW_LBL_TRY_AGAIN">Try again</string>
    <string name="ADR_NFC_RENTAL_VIEW_TITLE">Rent bike</string>
    <string name="ADR_NFC_SERVICE_DESC">Rent a bike by tapping your device on the contactless reader</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_1_ALWAYS_ON">Place phone near dock</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_1_INSTRUCTIONS">Place phone near dock</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_1_SUCCESS">Communicated with dock</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_1_TAP_TO_RENT">Rent a bike</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_1_TRY_AGAIN">Place phone near dock</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_2_ALWAYS_ON">Wait to unlock a bike</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_2_INSTRUCTIONS">Wait to unlock a bike</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_2_SUCCESS">Wait for bike to unlock</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_2_TAP_TO_RENT">Tap key to rent a bike</string>
    <string name="ADR_NFC_WIDGET_LBL_LINE_2_TRY_AGAIN">Try again!</string>
    <string name="ADR_PREFERENCES_RESET_HINTS_DIALOG_CANCEL_BTN">CANCEL</string>
    <string name="ADR_PREFERENCES_RESET_HINTS_DIALOG_RESET_BTN">RESET</string>
    <string name="ADR_PREFERENCES_RESET_HINTS_TITLE">Hints</string>
    <string name="ADR_PREFERENCES_RESET_HINTS_TOAST">Hints have been reset</string>
    <string name="ADR_PREFERENCES_RESET_NFC_BIKE_KEY_DIALOG_CANCEL_BTN">CANCEL</string>
    <string name="ADR_RENTAL_BTN_WALKTHROUGH">GOT IT!</string>
    <string name="ADR_RENTAL_PIN_DIALOG_BTN_CANCEL_CC">CANCEL</string>
    <string name="ADR_RENTAL_PIN_DIALOG_BTN_UPDATE_CC">UPDATE</string>
    <string name="ADR_SEARCH_VIEW_BTN_MORE_FAV_PLACES">MORE FAVORITE PLACES</string>
    <string name="ADR_SEARCH_VIEW_BTN_MORE_RECENT_SEARCHES">MORE FROM RECENT SEARCHES</string>
    <string name="ADR_SETTINGS_NFC_BIKE_KEY_DIALOG_ERROR_LBL">Bad bike key. Must be exactly 16 hex characters</string>
    <string name="ADR_SETTINGS_NFC_BIKE_KEY_DIALOG_TITLE">NFC Bike Key</string>
    <string name="ADR_SETTINGS_NFC_BIKE_KEY_LBL_SECTION_TITLE">NFC Bike Key</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_LBL_SECTION_MANAGE">Manage</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_LBL_SECTION_TITLE">Rental method</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_LBL_NFC_ALWAYS_ON">NFC always ready</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_LBL_NFC_ALWAYS_ON_EXPLANATION">At any time you can rent a bike using NFC. Simply tap your phone to a dock. You just need to make sure your screen is turned on and you are not in airplane mode.</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_LBL_NFC_TAP_TO_RENT">NFC button tap</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_LBL_NFC_TAP_TO_RENT_EXPLANATION">Tap a button in the widget or the app to rent a bike using NFC.</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_LBL_RELEASE_CODE">Release code</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_LBL_RELEASE_CODE_EXPLANATION">Get a release code that you enter on the dock.</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_LBL_TITLE">Choose how you would like to rent a bike with the mobile app</string>
    <string name="ADR_SETTINGS_RENTAL_METHOD_VIEW_TITLE">Rental method</string>
    <string name="ADR_SETTINGS_RESET_NFC_BIKE_KEY_DIALOG_CANCEL_BTN">CANCEL</string>
    <string name="ADR_SETTINGS_RESET_NFC_BIKE_KEY_DIALOG_MESSAGE">Are you sure you want to reset the NFC bike key?</string>
    <string name="ADR_SETTINGS_RESET_NFC_BIKE_KEY_DIALOG_RESET_BTN">RESET</string>
    <string name="ADR_SETTINGS_RESET_NFC_BIKE_KEY_DIALOG_SAVE_BTN">SAVE</string>
    <string name="ADR_SETTINGS_RESET_NFC_BIKE_KEY_LBL">Reset NFC Bike Key</string>
    <string name="ADR_UNDO_ACTION_SNACKBAR_LBL_UNDO">UNDO</string>
    <string name="ADR_VIEW_ALL_FAV_PLACES_FAV_PLACES_DELETED_MSG">%d favorite place(s) deleted</string>
    <string name="ADR_VIEW_ALL_RECENT_SEARCHES_RECENT_SEARCHES_DELETED_MSG">%d recent search(es) deleted</string>
    <string name="BIKE">%1$s bike</string>
    <string name="BIKES">%1$s bikes</string>
    <string name="CITY_SELECTION_TOAST_USER_CITY_DETECTED">Welcome to %1$s</string>
    <string name="CREDIT_CARD_PICTURE_BTN_SCAN">Scan your card</string>
    <string name="CREDIT_CARD_PICTURE_DIALOG_TITLE_PERMISSION">Permission required</string>
    <string name="CREDIT_CARD_PICTURE_LBL_DIALOG_PERMISSION">To help fill out your credit card infomation more easily, you can allow the application to access the camera to scan the card by modifying the settings for the application.</string>
    <string name="CREDIT_CARD_PICTURE_SCAN_INSTRUCTIONS_LBL">Center the card inside\10the rectangle to scan it</string>
    <string name="DEEPLINK_RENTAL_MSG">Sign up or sign in to your account to rent a bike.</string>
    <string name="DEEPLINK_RENTAL_TITLE">Sign up or sign in</string>
    <string name="GENERIC_NETWORK_ERROR_INVALID_INFORMATION">Verify that the information you entered is correct and try again</string>
    <string name="GENERIC_NETWORK_ERROR_NETWORK_UNAVAILABLE">Verify that you are connected to the Internet</string>
    <string name="GENERIC_NETWORK_ERROR_SERVER_ERROR">A server error occurred. Try again. If the problem persists, contact customer service.</string>
    <string name="GENERIC_NETWORK_ERROR_SERVER_UNAVAILABLE">The server seems to be down. Try again later.</string>
    <string name="display_on_map">Display on map</string>
    <string name="map_settings_bikepath">Bike paths</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="maptype">Map type</string>
    <string name="msg_loading">Loading...</string>
    <string name="pois_title">Points of interest</string>
    <string name="settings_map_legend">Map legend</string>
    <string name="show_bike_key_dispenser">Bike key dispensers</string>
    <string name="setting">Setting</string>
    <string name="timerVal">Timer Value</string>
    <string name="startButtonLabel">Start</string>
    <string name="resetButtonLabel">Reset</string>
    <string name="stopButtonLabel">Stop</string>
    <string name="menu_profile">Profile</string>
</resources>