<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/menu_email" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_trip"
            android:title="@string/menu_trip" />
        <item
            android:id="@+id/nav_billing"
            android:icon="@drawable/ic_billing_statement"
            android:title="@string/menu_billing" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_stacked_line_chart_24"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_rentle_timer"
            android:icon="@drawable/ic_baseline_timer_24"
            android:title="@string/menu_rentle_timer" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
    </group>
    <item android:title="General" >

        <menu>
            <item android:title="Share App"
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"/>
        </menu>
    </item>
</menu>