<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/nav_my_location"
        android:icon="@drawable/ic_baseline_my_location_24"
        android:title="@string/menu_my_location" />

    <item
        android:id="@+id/nav_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/menu_refresh" />

    <item
        android:id="@+id/nav_cycle"
        android:icon="@drawable/ic_bike"
        android:title="@string/menu_cycle" />

    <item
        android:id="@+id/nav_star"
        android:icon="@drawable/ic_baseline_star_half_24"
        android:title="@string/menu_star" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_setting" />


</menu>