<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.bottom_fragments.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_map_type_lbl"
        style="@style/SettingsHeaderText"
        android:text="@string/maptype" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/normal_wrap"
        style="@style/SettingsRow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/map_type_normal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/normal_rdb"
            style="@style/SettingsRadioBtn" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hybrid_wrap"
        style="@style/SettingsRow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/map_type_hybrid" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hybrid_rdb"
            style="@style/SettingsRadioBtn" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/satellite_wrap"
        style="@style/SettingsRow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/map_type_satellite" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/satellite_rdb"
            style="@style/SettingsRadioBtn" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/terrain_wrap"
        style="@style/SettingsRow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/map_type_terrain" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terrain_rdb"
            style="@style/SettingsRadioBtn" />
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/map_legend_lbl"
        style="@style/SettingsRowText"
        android:text="@string/settings_map_legend" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SecondaryDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_display_on_map_lbl"
        style="@style/SettingsHeaderText"
        android:text="@string/display_on_map" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_bikepaths_wrap"
        style="@style/SettingsRow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/map_settings_bikepath" />

        <LinearLayout
            android:id="@+id/bikepaths_state_wrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/display_bikepaths_chk"
                style="@style/SettingsChk" />

            <TextView
                android:id="@+id/display_bikepaths_lbl"
                style="@style/SettingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_loading" />

            <ProgressBar
                android:id="@+id/loading_bikepaths_prg"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="10dp" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_pois_wrap"
        style="@style/SettingsRow"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/poi_title"
            style="@style/SettingsText"
            android:text="@string/pois_title" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/display_pois_chk"
            style="@style/SettingsChk" />

        <ProgressBar
            android:id="@+id/poi_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false"
            android:paddingRight="10dp"
            android:visibility="gone" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_bike_key_dispenser_wrap"
        style="@style/SettingsRow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/show_bike_key_dispenser" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/display_bike_key_dispenser_chk"
            style="@style/SettingsChk" />
    </LinearLayout>

</LinearLayout>
